force-app/main/default/objects/Tegra_Embd_Regstr_Expiration_by_Partners__c/Tegra_Embd_Regstr_Expiration_by_Partners__c.object-meta.xml
<CustomObject>
    <description>This will have the list of all Partner Accounts those qualify for either of the criteria below, 
1) Partner Accounts which have to be exempted from the Registration expiration process 
2) Partner Accounts that will have their own threshold limit for expiration.</description>
    <label>Tegra Embd Regstr Expiration by Partners</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tegra Embd Regstr Expiration by Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>