force-app/main/default/objects/Tegra_Embd_Regstr_Expiration_by_Partners__c/fields/Default_Threshold_Limit_for_Partner__c.field-meta.xml
<CustomField>
    <fullName>Default_Threshold_Limit_for_Partner__c</fullName>
    <description>This field decides the maximum time the Opportunity should not be expired by its Partner (Account)</description>
    <label>Default Threshold Limit for Partner</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>