force-app/main/default/objects/Tegra_Embd_Regstr_Expiration_by_Partners__c/fields/Do_not_Expire_Registration__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Expire_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field let the Opportunity to not expired if it is child of this Partner (Account)</description>
    <label>Do not Expire Registration</label>
    <type>Checkbox</type>
</CustomField>