force-app/main/default/objects/Tegra_Embd_Regstr_Expiration_by_Partners__c/fields/Expire_Registration__c.field-meta.xml
<CustomField>
    <fullName>Expire_Registration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field let the Opportunity Expired if it is child of this Partner (Account)</description>
    <label>Expire Registration</label>
    <type>Checkbox</type>
</CustomField>