force-app/main/default/objects/Tegra_Embd_Regstr_Expiration_by_Partners__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Sales_Rep_Company__c</columns>
    <columns>Default_Threshold_Limit_for_Partner__c</columns>
    <columns>Expire_Registration__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>